# nexus-node

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  deny.toml  docker-compose.yml  lcov.info  rust-toolchain.toml  rustfmt.toml
crates/nexus-config/: Cargo.toml  Config_Context.md  Config_Summary.md
crates/nexus-config/src/: consensus.rs  dirs.rs  error.rs  execution.rs  genesis.rs  intent.rs  lib.rs  node.rs  rpc.rs  telemetry.rs
crates/nexus-consensus/: Cargo.toml  Code_Context.md  Code_Summary.md
crates/nexus-consensus/src/: certificate.rs  dag.rs  engine.rs  epoch_manager.rs  error.rs  lib.rs  persist.rs  shoal.rs  traits.rs  types.rs  validator.rs
crates/nexus-consensus/tests/: fv_property_tests.rs  fv_proptest.rs
crates/nexus-crypto/: Cargo.toml  Hash_Context.md  Hash_Summary.md  Kem_Context.md  Kem_Summary.md  Signatures_Context.md  Signatures_Summary.md
crates/nexus-crypto/src/: csprng.rs  domains.rs  error.rs  falcon.rs  hasher.rs  lib.rs  mldsa.rs  mlkem.rs  traits.rs
crates/nexus-execution/: Block_Stm_Context.md  Block_Stm_Summary.md  Cargo.toml  Move_Context.md  Move_Summary.md
crates/nexus-execution/proptest-regressions/block_stm/: mod.txt
crates/nexus-execution/src/: error.rs  gas_calibration.rs  lib.rs  metrics.rs  service.rs  traits.rs  types.rs
crates/nexus-execution/src/block_stm/: adaptive.rs  executor.rs  mod.rs  mvhashmap.rs
crates/nexus-execution/src/move_adapter/: abi.rs  builtin_vm.rs  entry_function.rs  events.rs  gas_meter.rs  mod.rs  move_runtime.rs  nexus_vm.rs  package.rs  publisher.rs  query.rs  resources.rs  session.rs  state_view.rs  stdlib.rs  type_bridge.rs  verifier.rs  vm_config.rs
crates/nexus-execution/tests/: fv_proptest.rs
crates/nexus-intent/: Agent_Core_Context.md  Agent_Core_Summary.md  Cargo.toml  Compiler_Context.md  Compiler_Summary.md  Resolver_Context.md  Resolver_Summary.md
crates/nexus-intent/src/: config.rs  error.rs  lib.rs  metrics.rs  service.rs  traits.rs  types.rs
crates/nexus-intent/src/agent_core/: a2a.rs  a2a_negotiator.rs  capability_snapshot.rs  dispatcher.rs  engine.rs  envelope.rs  intent_planner_bridge.rs  mod.rs  planner.rs  policy.rs  provenance.rs  provenance_store.rs  rocks_provenance_store.rs  rocks_session_store.rs  session.rs
crates/nexus-intent/src/compiler/: mod.rs  optimizer.rs  parser.rs  planner.rs  validator.rs
crates/nexus-intent/src/resolver/: balance_agg.rs  contract_registry.rs  mod.rs  shard_lookup.rs
crates/nexus-intent/tests/: fv_proptest.rs
crates/nexus-network/: Cargo.toml  Code_Context.md  Code_Summary.md
crates/nexus-network/src/: codec.rs  config.rs  error.rs  lib.rs  metrics.rs  rate_limit.rs  service.rs  traits.rs  types.rs
crates/nexus-network/src/discovery/: disjoint.rs  mod.rs
crates/nexus-network/src/gossip/: dedup.rs  mod.rs  scoring.rs
crates/nexus-network/src/transport/: connection_pool.rs  mod.rs  quic.rs
crates/nexus-node/: Cargo.toml  Pipeline_Context.md  Pipeline_Summary.md  Runtime_Context.md  Runtime_Summary.md
crates/nexus-node/src/: anchor_batch.rs  backends.rs  batch_persist.rs  batch_proposer.rs  batch_store.rs  cert_aggregator.rs  chain_identity.rs  commitment_tracker.rs  consensus_bridge.rs  epoch_network_bridge.rs  epoch_store.rs  execution_bridge.rs  genesis_boot.rs  gossip_bridge.rs  intent_watcher.rs  lib.rs  main.rs  mempool.rs  node_metrics.rs  readiness.rs  session_cleanup.rs  snapshot_provider.rs  snapshot_signing.rs  staking_snapshot.rs  startup_report.rs  state_sync.rs  storage_maintenance.rs  validator_discovery.rs  validator_identity.rs  validator_keys.rs
crates/nexus-primitives/: Cargo.toml  Primitives_Context.md  Primitives_Summary.md
crates/nexus-primitives/src/: address.rs  digest.rs  error.rs  ids.rs  lib.rs  traits.rs
crates/nexus-rpc/: Cargo.toml  Mcp_Context.md  Mcp_Summary.md  Rest_Context.md  Rest_Summary.md
crates/nexus-rpc/src/: dto.rs  error.rs  intent_tracker.rs  lib.rs  metrics.rs  middleware.rs  server.rs  tx_lifecycle.rs  ws.rs
crates/nexus-rpc/src/mcp/: error_map.rs  (+5 more)
crates/nexus-storage/: Backends_Context.md  Backends_Summary.md  Cargo.toml  Contracts_Context.md  Contracts_Summary.md
crates/nexus-storage/src/: backup_tree.rs  commitment.rs  commitment_persist.rs  config.rs  error.rs  lib.rs  memory.rs  traits.rs  types.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_bcs_certificate.rs  fuzz_bcs_transaction.rs  fuzz_gossip_message.rs  fuzz_move_bytecode.rs  fuzz_snapshot_import.rs  fuzz_state_sync_message.rs
tests/nexus-test-utils/: Cargo.toml  Test_Context.md  Test_Summary.md
tests/nexus-test-utils/src/: assert_helpers.rs  canonical_root_tests.rs  chaos_readiness_tests.rs  cold_restart_tests.rs  commitment_recovery_tests.rs  cross_node_election_tests.rs  cross_shard_determinism_tests.rs  determinism_tests.rs  economic_foundation_tests.rs  epoch_e2e_consistency_tests.rs  epoch_stress_tests.rs  epoch_tests.rs  fault_injection_tests.rs  fv_differential_runner.rs  governance_recovery_tests.rs  htlc_tests.rs  integration.rs  lib.rs  lifecycle_tests.rs  move_integration_tests.rs  multi_shard_tests.rs  multinode_tests.rs  network_integration_tests.rs  network_shard_tests.rs  node_e2e_tests.rs  node_integration_tests.rs  persistence_tests.rs  pipeline_tests.rs  precision_tests.rs  proof_smoke_tests.rs  proof_tests.rs  readiness_tests.rs  recovery_tests.rs  release_regression_tests.rs  resilience_tests.rs  rpc_integration.rs  scenario_tests.rs  shard_failure_tests.rs  soak_tests.rs  stake_weighted_cert_tests.rs  (+5 more)
tools/nexus-bench/: Cargo.toml
tools/nexus-bench/benches/: commitment_bench.rs  consensus_bench.rs  crypto_bench.rs  execution_bench.rs  hash_bench.rs  intent_bench.rs  network_bench.rs  pipeline_bench.rs
tools/nexus-bench/src/: lib.rs
tools/nexus-bench/tests/: gas_baseline.rs
tools/nexus-genesis/: Cargo.toml
tools/nexus-genesis/src/: main.rs
tools/nexus-keygen/: Cargo.toml
tools/nexus-keygen/src/: main.rs
tools/nexus-wallet/: Cargo.toml
tools/nexus-wallet/src/: lib.rs  main.rs
tools/nexus-wallet/tests/: move_cli_integration.rs
(+204 files in other folders)
