[package]
name         = "nexus-config"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
description  = "Configuration parsing and validation for Nexus nodes (TOML + environment variables)."

[dependencies]
nexus-primitives = { workspace = true }
nexus-crypto     = { workspace = true }
nexus-network    = { workspace = true }
nexus-storage    = { workspace = true }
libp2p-identity  = { workspace = true }
thiserror        = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
toml             = { workspace = true }
tempfile         = { workspace = true }
hex              = { workspace = true }

[dev-dependencies]
nexus-test-utils = { workspace = true }
