[package]
name         = "nexus-consensus"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
description  = "Narwhal DAG mempool and Shoal++ BFT consensus engine for Nexus."

[dependencies]
nexus-primitives = { workspace = true }
nexus-crypto     = { workspace = true }
nexus-network    = { workspace = true }
nexus-storage    = { workspace = true }
tokio            = { workspace = true }
futures          = { workspace = true }
thiserror        = { workspace = true }
serde            = { workspace = true }
tracing          = { workspace = true }
bcs              = { workspace = true }

[dev-dependencies]
nexus-test-utils = { workspace = true }
serde_json       = { workspace = true }
tokio            = { workspace = true, features = ["test-util"] }
proptest         = { workspace = true }
