[package]
name         = "nexus-primitives"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
description  = "Core primitive types for the Nexus blockchain (IDs, digests, timestamps)."

[dependencies]
serde      = { workspace = true }
thiserror  = { workspace = true }
hex        = { workspace = true }
zeroize    = { workspace = true }
blake3     = { workspace = true }

[dev-dependencies]
bcs        = { workspace = true }
serde_json = { workspace = true }
