[package]
name         = "nexus-genesis"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
description  = "CLI tool for generating the Nexus genesis block configuration."

[[bin]]
name = "nexus-genesis"
path = "src/main.rs"

[dependencies]
nexus-primitives = { workspace = true }
nexus-crypto     = { workspace = true }
nexus-config     = { workspace = true }
anyhow           = { workspace = true }
serde            = { workspace = true }
serde_json       = { workspace = true }
clap             = { workspace = true }
hex              = { workspace = true }

[dev-dependencies]
tempfile        = { workspace = true }
libp2p-identity = { workspace = true }
